RESOLVED FIXED110223
Web Inspector: release backtrace object group on each step
https://bugs.webkit.org/show_bug.cgi?id=110223
Summary Web Inspector: release backtrace object group on each step
Pavel Podivilov
Reported 2013-02-19 07:19:38 PST
Web Inspector: release backtrace object group on each step
Attachments
Patch (2.56 KB, patch)
2013-02-19 07:21 PST, Pavel Podivilov
pfeldman: review+
webkit.review.bot: commit-queue-
Pavel Podivilov
Comment 1 2013-02-19 07:21:56 PST
WebKit Review Bot
Comment 2 2013-02-19 07:46:57 PST
Comment on attachment 189085 [details] Patch Rejecting attachment 189085 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-02', 'validate-changelog', '--non-interactive', 189085, '--port=chromium-xvfb']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/16614839
Andrey Adaikin
Comment 3 2013-02-19 07:57:17 PST
Could you plz say more about the problem you are fixing? Is it memory leaks? What's a background of this problem (how did you find it)?
Pavel Podivilov
Comment 4 2013-02-19 08:07:37 PST
Yes, it's a memory leak. I found it using about:memory page and then heap snapshots in inspector profiler.
Andrey Adaikin
Comment 5 2013-02-19 08:09:41 PST
(In reply to comment #4) > Yes, it's a memory leak. I found it using about:memory page and then heap snapshots in inspector profiler. Nice! Thanks.
Pavel Podivilov
Comment 6 2013-02-19 08:14:36 PST
Note You need to log in before you can comment on or make changes to this bug.