Web Inspector: release backtrace object group on each step. https://bugs.webkit.org/show_bug.cgi?id=110223

Reviewed by Pavel Feldman.

* inspector/InspectorDebuggerAgent.cpp:
(WebCore):
(WebCore::InspectorDebuggerAgent::stepOver):
(WebCore::InspectorDebuggerAgent::stepInto):
(WebCore::InspectorDebuggerAgent::stepOut):

Canonical link: https://commits.webkit.org/128521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143334 268f45cc-cd09-0410-ab3c-d52691b4dbfc